[package]
name = "buptcan"
version = "0.2.1"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
reqwest = {version = "0.11", features = ["blocking"]}
dialoguer = "0.8.0"
ureq = "2.1.1"
ctrlc = "3.1.9"
shadow-rs = "0.5"

[build-dependencies]
shadow-rs = "0.5"

